--- a/4-Classification/2-Classifiers-1/notebook.ipynb
+++ b/4-Classification/2-Classifiers-1/notebook.ipynb
@@ -371,10 +371,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingredients: Index(['carrot', 'egg_noodle', 'pea', 'peanut_oil', 'pork', 'scallion',\n",
+      "       'sesame_oil', 'soy_sauce', 'starch'],\n",
+      "      dtype='object')\n",
+      "cuisine: chinese\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'ingredients: {X_test.iloc[40][X_test.iloc[40]!=0].keys()}')\n",
+    "print(f'cuisine: {y_test.iloc[40]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0        40\n",
+       "cuisine       indian\n",
+       "almond             0\n",
+       "angelica           0\n",
+       "anise              0\n",
+       "               ...  \n",
+       "wood               0\n",
+       "yam                0\n",
+       "yeast              0\n",
+       "yogurt             0\n",
+       "zucchini           0\n",
+       "Name: 40, Length: 382, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[40]"
+   ]
   }
  ],
  "metadata": {
